More visibility fixes

--- a/style/main.css
+++ b/style/main.css
@@ -386,6 +386,65 @@ hr {
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
         font-size: 15px; } }
+		
+	.tile.tile-2I .tile-inner {
+    background-image: url("../assets/2I.png");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+  .tile.tile-4I .tile-inner {
+    background-image: url("../assets/4I.png");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+  .tile.tile-8I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/8I.png"); }
+  .tile.tile-16I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/16I.png"); }
+  .tile.tile-32I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/32I.png"); }
+  .tile.tile-64I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/64I.png"); }
+  .tile.tile-128I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/128I.png");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
+    font-size: 45px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-128I .tile-inner {
+        font-size: 25px; } }
+  .tile.tile-256I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/256I.png");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
+    font-size: 45px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-256I .tile-inner {
+        font-size: 25px; } }
+  .tile.tile-512I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/512I.png");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
+    font-size: 45px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-512I .tile-inner {
+        font-size: 25px; } }
+  .tile.tile-1024I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/1024I.png");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
+    font-size: 35px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-1024I .tile-inner {
+        font-size: 15px; } }
+  .tile.tile-2048I .tile-inner {
+    color: #f9f6f2;
+    background-image: url("../assets/2048I.png");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+    font-size: 35px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-2048I .tile-inner {
+        font-size: 15px; } }
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background-image: url("../assets/default.png");
